hphp/test/zend/bad/Zend/tests/bug55705.php.expectf
Catchable fatal error: Argument 1 passed to f() must be callable, none given, called in %s on line 3 and defined in %s on line %d